--- a/index.html
+++ b/index.html
@@ -5,55 +5,186 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>How many Games do you need</title>
   <style>
+    :root{
+      --bg:#070A12;
+      --card: rgba(255,255,255,0.06);
+      --card2: rgba(255,255,255,0.03);
+      --stroke: rgba(255,255,255,0.14);
+      --text: rgba(255,255,255,0.92);
+      --muted: rgba(255,255,255,0.60);
+      --accent: #7CFFCB;
+      --accent2:#9B7CFF;
+      --accent3:#4CC8FF;
+      --shadow: 0 22px 70px rgba(0,0,0,0.55);
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+
     body{
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      min-height:100vh;
       margin:0;
+      min-height:100vh;
       display:flex;
       align-items:center;
       justify-content:center;
-      background:#fff;
-      color:#000;
+      padding: 28px 16px;
+      font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color: var(--text);
+      background: var(--bg);
+      overflow:hidden;
     }
+
+    /* Animated background layer */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:-20%;
+      background:
+        radial-gradient(900px 520px at 15% 20%, rgba(124,255,203,0.20), transparent 60%),
+        radial-gradient(900px 520px at 85% 70%, rgba(155,124,255,0.18), transparent 60%),
+        radial-gradient(700px 420px at 55% 15%, rgba(76,200,255,0.14), transparent 60%),
+        conic-gradient(from 180deg at 50% 50%, rgba(124,255,203,0.12), rgba(155,124,255,0.10), rgba(76,200,255,0.10), rgba(124,255,203,0.12));
+      filter: blur(40px) saturate(120%);
+      opacity:0.80;
+      z-index:-2;
+      animation: bgMove 14s ease-in-out infinite alternate;
+      transform: translate3d(0,0,0);
+      pointer-events:none;
+    }
+
+    /* Subtle moving grid */
+    body::after{
+      content:"";
+      position:fixed;
+      inset:0;
+      background-image:
+        linear-gradient(to right, rgba(255,255,255,0.06) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(255,255,255,0.06) 1px, transparent 1px);
+      background-size: 64px 64px;
+      opacity:0.18;
+      z-index:-1;
+      mask-image: radial-gradient(600px 420px at 50% 30%, black 35%, transparent 70%);
+      animation: gridDrift 18s linear infinite;
+      pointer-events:none;
+    }
+
+    @keyframes bgMove{
+      0%{ transform: translate(-2%, -1%) rotate(-2deg) scale(1.02); }
+      100%{ transform: translate(2%, 2%) rotate(3deg) scale(1.06); }
+    }
+
+    @keyframes gridDrift{
+      0%{ background-position: 0 0, 0 0; }
+      100%{ background-position: 80px 40px, 40px 80px; }
+    }
+
     .wrap{
-      width:260px;
+      width: 340px;
+      padding: 26px 24px 30px;
       text-align:center;
+      border-radius: 22px;
+      background: linear-gradient(180deg, var(--card), var(--card2));
+      border: 1px solid var(--stroke);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      position:relative;
+      overflow:hidden;
     }
+
+    /* crisp top highlight */
+    .wrap::before{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      background: radial-gradient(700px 200px at 30% 0%, rgba(255,255,255,0.16), transparent 60%);
+      opacity:0.55;
+      pointer-events:none;
+    }
+
     h1{
-      font-size:20px;
-      margin:0 auto 22px;
-      max-width:260px;
-      white-space:nowrap;
+      margin: 0 0 22px;
+      font-size: 20px;
+      font-weight: 750;
+      letter-spacing: -0.02em;
+      white-space: nowrap;
     }
-    .row{
-      margin:12px 0;
-    }
+
+    .row{ margin: 14px 0; }
+
     label{
       display:block;
-      font-size:13px;
-      margin-bottom:4px;
+      margin-bottom: 6px;
+      font-size: 12px;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: var(--muted);
+      user-select:none;
     }
+
     input{
-      width:120px; /* passend für bis zu 5-stellige Zahlen */
-      padding:10px 12px;
-      font-size:16px;
-      border:1px solid #999;
-      border-radius:6px;
-      text-align:center;
-      margin:0 auto;
+      width: 128px;
+      margin: 0 auto;
       display:block;
+      padding: 12px 14px;
+      font-size: 16px;
+      text-align:center;
+      color: var(--text);
+      background: rgba(10,12,20,0.55);
+      border: 1px solid rgba(255,255,255,0.16);
+      border-radius: 14px;
+      outline:none;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.35);
+      transition: transform .16s ease, border-color .16s ease, box-shadow .16s ease, background .16s ease;
+      font-variant-numeric: tabular-nums;
     }
+
+    input:hover{
+      transform: translateY(-1px);
+      background: rgba(10,12,20,0.65);
+      border-color: rgba(255,255,255,0.26);
+    }
+
+    input:focus{
+      transform: translateY(-1px);
+      border-color: rgba(124,255,203,0.60);
+      box-shadow:
+        0 0 0 5px rgba(124,255,203,0.14),
+        0 16px 36px rgba(0,0,0,0.45);
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button{ -webkit-appearance:none; margin:0; }
+    input[type=number]{ -moz-appearance:textfield; }
+
     .result{
-      margin-top:34px;
+      margin-top: 34px;
     }
+
     .result-label{
-      font-size:14px;
-      color:#444;
+      font-size: 12px;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: var(--muted);
+      user-select:none;
     }
+
     .result-value{
-      font-size:34px;
-      font-weight:700;
-      margin-top:4px;
+      margin-top: 10px;
+      font-size: 46px;
+      font-weight: 850;
+      letter-spacing: -0.03em;
+      background: linear-gradient(90deg, var(--accent), var(--accent3), var(--accent2));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      text-shadow: 0 18px 55px rgba(0,0,0,0.35);
+    }
+
+    @media (max-width:360px){
+      .wrap{ width: 92vw; }
+      h1{ font-size: 18px; }
+      input{ width: 140px; }
     }
   </style>
 </head>
@@ -114,17 +245,8 @@
         return;
       }
 
-      // Nur clampen, wenn der Nutzer "fertig" ist (also >= 50 ODER Feld leer war)
-      // Dadurch kann man z.B. erst "6" und dann "65" tippen
-      if (winrate > 100){
-        winrate = 100;
-        winEl.value = "100";
-      }
-
-      if (winrate < 50 && winEl.value.length >= 2){
-        winrate = 50;
-        winEl.value = "50";
-      }
+      if (winrate > 100){ winrate = 100; winEl.value = "100"; }
+      if (winrate < 50 && winEl.value.length >= 2){ winrate = 50; winEl.value = "50"; }
 
       if (current >= target){
         gamesEl.textContent = "0";
