--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>How many Games do you need</title>
+  <title>How many Games do you need?</title>
   <style>
     :root{
       --bg:#070A12;
@@ -19,14 +19,15 @@
     }
 
     *{ box-sizing:border-box; }
-    html,body{
+    html,body{ height:100%; }
+
+    body{
       margin:0;
       min-height:100vh;
       display:flex;
-      flex-direction:column;
       align-items:center;
       justify-content:center;
-      padding: 28px 16px 56px;
+      padding: 28px 16px;
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       color: var(--text);
       background: var(--bg);
@@ -102,24 +103,13 @@
     }
 
     h1{
-      margin: 0 0 18px;
-      font-size: 30px;
-      font-weight: 850;
-      letter-spacing: -0.03em;
-      text-align: center;
+      margin: 0 0 22px;
+      font-size: 20px;
+      font-weight: 750;
+      letter-spacing: -0.02em;
       white-space: nowrap;
-      text-shadow: 0 18px 55px rgba(0,0,0,0.45);
     }
 
-    .page{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      gap: 14px;
-    }
-
-    
     .row{ margin: 14px 0; }
 
     label{
@@ -145,7 +135,7 @@
       border-radius: 14px;
       outline:none;
       box-shadow: 0 12px 30px rgba(0,0,0,0.35);
-      transition: transform .16s ease, border-color .16s ease, box-shadow .16s ease, background .16s ease;
+      transition: border-color .16s ease, box-shadow .16s ease, background .16s ease;
       font-variant-numeric: tabular-nums;
     }
 
@@ -197,9 +187,8 @@
   </style>
 </head>
 <body>
-  <div class="page">
+  <div class="wrap">
     <h1>How many Games do you need?</h1>
-    <div class="wrap">
 
     <div class="row">
       <label for="current">Your MMR</label>
@@ -220,7 +209,6 @@
       <div class="result-label">Games Needed</div>
       <div class="result-value" id="games">—</div>
     </div>
-      </div>
   </div>
 
   <script>
@@ -230,10 +218,6 @@
     const targetEl  = document.getElementById("target");
     const winEl     = document.getElementById("winrate");
     const gamesEl   = document.getElementById("games");
-
-    function clamp(n, min, max){
-      return Math.min(max, Math.max(min, n));
-    }
 
     function ceilSafe(x){
       return Math.ceil(x - 1e-12);
@@ -255,16 +239,21 @@
         return;
       }
 
-      if (winrate > 100){ winrate = 100; winEl.value = "100"; }
-      if (winrate < 50 && winEl.value.length >= 2){ winrate = 50; winEl.value = "50"; }
+      // Nur nach oben clampen (0–100 möglich, >100 wird zu 100)
+      if (winrate > 100){
+        winrate = 100;
+        winEl.value = "100";
+      }
 
+      // Wenn du bereits am Ziel bist
       if (current >= target){
         gamesEl.textContent = "0";
         return;
       }
 
-      if (winrate === 50){
-        gamesEl.textContent = "Unlimited";
+      // Bei <= 50% ist der erwartete Fortschritt <= 0
+      if (winrate <= 50){
+        gamesEl.textContent = "∞";
         return;
       }
 
@@ -273,7 +262,7 @@
       const avg = MMR_PER_GAME * (2 * p - 1);
 
       if (avg <= 0){
-        gamesEl.textContent = "Unlimited";
+        gamesEl.textContent = "∞";
         return;
       }
 
